fixing minor layout issues

--- a/custom.scss
+++ b/custom.scss
@@ -54,7 +54,6 @@ $enable-rounded:            false !default;
 
 $body-color:                $gray-700 !default;
 
-
 // Fonts
 
 // stylelint-disable-next-line value-keyword-case
@@ -106,9 +105,7 @@ $pagination-hover-border-color:     $pagination-border-color !default;
 $pagination-disabled-border-color:  $pagination-border-color !default;
 
 
-
 /*-- scss:rules --*/
-
 
 // Variables
 
@@ -118,16 +115,11 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
 }
 
 // Navbar
-
-// Navbar
 .navbar {
-  padding-top: 0em; /* Add some padding to the top of the navbar */
-  padding-bottom: 1em; /* Add some padding to the bottom of the navbar */
-
-  @media (max-width: 768px) {
-    padding-top: 0.5em; /* Adjust padding for smaller screens */
-    padding-bottom: 0.5em; /* Adjust padding for smaller screens */
-  }
+  padding-top: 0 !important; /* Remove top padding */
+  padding-bottom: 0 !important; /* Remove bottom padding */
+  margin-bottom: 0 !important; /* Remove bottom margin */
+  font-size: 1.05em;
 
   &-nav {
     .nav-link {
@@ -136,8 +128,8 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
       color: $navyblue2 !important;
 
       @media (max-width: 768px) {
-        padding-top: 0.25rem; /* Adjust padding for smaller screens */
-        padding-bottom: 0.25rem; /* Adjust padding for smaller screens */
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
       }
     }
   }
@@ -146,10 +138,11 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;6
     margin-right: 1rem;
 
     @media (max-width: 768px) {
-      margin-right: 0.5rem; /* Adjust margin for smaller screens */
+      margin-right: 0.5rem;
     }
   }
 }
+
 .bg-primary {
   background-color: $gray-custom !important;
 }
@@ -228,12 +221,14 @@ h5,
 }
 
 body {
-h6 {text-transform: none}
+  h6 {
+    text-transform: none;
+  }
 }
+
 .text-secondary {
   color: $body-color !important;
 }
-
 
 // Tables
 
@@ -254,16 +249,18 @@ th {
       padding: 0.5rem;
     }
   }
-.bold {
-      font-size: 1.25rem;
-      font-weight: 900;
-      color: $gray-900;
-  }  
-.bold-p {
-      font-size: 1rem;
-      font-weight: 700;
-      color: $gray-800;
-  }   
+
+  .bold {
+    font-size: 1.25rem;
+    font-weight: 900;
+    color: $gray-900;
+  }
+  
+  .bold-p {
+    font-size: 1rem;
+    font-weight: 700;
+    color: $gray-800;
+  }
 }
 
 // Navs
@@ -313,82 +310,22 @@ th {
     color: inherit;
   }
 }
+
 /*-- navbar --*/
 .navbar-logo {
-      height: 100%;
-      max-height: 70px;
-      width: auto;
-      align-items: baseline;
-}
-
-.navbar {
-  padding-top: 0em;
-  padding-bottom: 0 !important; /* Set padding-bottom to 0 */
-  font-size: 1.05em;
-}
-.navbar {
-  margin-bottom: 0 !important; /* Remove any bottom margin */
+  height: 100%;
+  max-height: 70px;
+  width: auto;
+  align-items: baseline;
 }
 
 /*-- Custom CSS to remove space between navbar and image banner --*/
 .banner {
-  margin-top: 0 !important; /* Set the margin-top to 0 for the .banner class */
-  padding-top: 0 !important; /* Ensure padding-top is also 0 */
+  margin-top: 0 !important; /* Remove top margin */
+  padding-top: 0 !important; /* Remove top padding */
 }
 
 .image-container .figure {
-  margin-top: 0 !important; /* Remove the top margin */
-  margin-bottom: 0 !important; /* Remove the bottom margin */
-}
-
-.responsive-img {
-  max-width: 100%;
-  height: auto;
-  
-  @media (max-width: 768px) {
-    max-width: 80%;
-  }
-
-  @media (max-width: 480px) {
-    max-width: 60%;
-  }
-}
-
-// Custom Email Link Class
-.email-link {
-  color: $blue3;
-  text-decoration: none;
-  border-bottom: 1px solid $blue3; // Optional: Add an underline for styling
-
-  &:hover {
-    color: darken($blue3, 10%); // Darken the color on hover
-  }
-}
-
-//Custom Marquees for select text and pausing it when a mouse HOVERS
-.marquee {
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
-
-  .content {
-    display: inline-block;
-    animation: marquee 10s linear infinite; // Adjust animation duration as needed
-    cursor: pointer; // Add cursor pointer to indicate it's clickable
-    font-size: 1em; // Increase font size as needed
-  }
-
-  @keyframes marquee {
-    0% {
-      transform: translateX(100%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
-  }
-
-  // Pause animation on hover and resume on hover out
-  &:hover .content {
-    animation-play-state: paused;
-  }
+  margin-top: 0 !important; /* Remove top margin */
+  padding-top: 0 !important; /* Remove top padding */
 }
